fixed content overflow issue

--- a/src/components/Blog.css
+++ b/src/components/Blog.css
@@ -1,11 +1,12 @@
 .Blog-main {
+    background-color: inherit;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
     color: #ffffff;
     padding-bottom: 200px;
     padding-top: 50px;
-    /* width: 100%; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .Blog-preview-list {
@@ -22,6 +23,7 @@
     padding: 30px;
     border-radius: 20px;
     border: solid 2px cyan;
+    overflow-wrap: break-word;
 }
 
 .Blog-preview-content:hover {
@@ -32,6 +34,13 @@
     .Blog-preview-list {
         flex-direction: column;
         align-items: center;
+    }
+
+    .Blog-preview-content {
+        margin-left: 0;
+        margin-right: 0;
+        width: 80%;
+        padding: 5%;
     }
 }
 
@@ -59,6 +68,8 @@
 }
 
 .Blog-findout-more {
+    display: flex;
+    align-self: center;
     margin-top: 30px;
     text-decoration: none;
     color: #ffffff;
